--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <div class="row">
         <div class="col">
           <div class="container p-5">
-            <a href="#" class="video" data-video="https://www.youtube.com/embed/HnwsG9a5riA" data-toggle="modal" data-target="#videoModal">
+            <a href="#" class="video" data-video="https://www.youtube.com/watch?v=4XoZvPPXcxM" data-toggle="modal" data-target="#videoModal">
               <i class="fas fa-play fa-3x"></i>
             </a>
           </div>
