hover buttons to the showcase area

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <link rel="stylesheet" href="css/style.css">
     <title>XTRA CLEAR IMAGING LIMITED</title>
 </head>
-<body>
+<body data-spy="scroll" data-target="#main-nav" id="home">
 
   
   <header id="header" >
@@ -24,10 +24,10 @@
         </div>
         <nav id="nav-menu-container">
           <ul class="nav-menu">
-            <li class="menu-active"><a href="#about">About Us</a></li>
-            <li><a href="#product"> Product & Services</a></li>
+            <li class="menu-active"><a href="#info">About Us</a></li>
+            <li><a href="#authors"> Product & Services</a></li>
             <li><a href="#contact">Contact Us</a></li>
-            <li><a href="#career">Career</a></li>
+            <li><a href="#services">Career</a></li>
 
           </ul>
         </nav><!-- #nav-menu-container -->		    		
@@ -287,7 +287,7 @@
     </section>
 
 
-    <section id="info" class="py-3">
+    <section id="contact" class="py-3">
       <div class="container">
         <div class="row">
           <div class="col-md-6 align-self-center">
